testsuite/tests/typing-modules-bugs/pr6899_first_bad.compilers.reference
File "pr6899_first_bad.ml", line 9, characters 4-17:
9 | let should_reject =
        ^^^^^^^^^^^^^
Error: The type of this expression, "'_a -> '_b -> unit",
       contains the non-generalizable type variable(s): "'_b", "'_a".
       (see manual section 6.1.2)
